[tool.poetry]
name = "api"
version = "0.0.0"
description = "Spear AI API"
authors = ["Spear AI <org@spear.ai>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"

[tool.poetry.group.dev.dependencies]
spear-ai-sqlfluff-config = "1.0.0"
sqlfluff = "3.0.6"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
